# gemini-bulk-call

./: .env.example  README.md  main.py  push_test.py  pyproject.toml  requirements.txt
